# LTRE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  disney_brdf_test.cpp  main.cpp
include/LTRE/accel/: accel.hpp  linear.hpp
include/LTRE/bsdf/: bsdf.hpp  bxdf.hpp  diffuse.hpp  disney.hpp  lambert.hpp
include/LTRE/bsdf/bxdf/: bxdf.hpp  diffuse.hpp  disney.hpp  fresnel.hpp  microfacet.hpp
include/LTRE/camera/: camera.hpp  pinhole-camera.hpp  thin-lens.hpp
include/LTRE/core/: aabb.hpp  color.hpp  constant.hpp  film.hpp  image.hpp  intersect-info.hpp  io.hpp  material.hpp  model.hpp  polygon.hpp  primitive.hpp  ray.hpp  renderer.hpp  scene.hpp  spectrum.hpp  texture.hpp  types.hpp
include/LTRE/integrator/: ao.hpp  integrator.hpp  nee.hpp  pt.hpp
include/LTRE/intersector/: bvh.hpp  intersector.hpp  linear-intersector.hpp  qbvh.hpp
include/LTRE/light/: area-light.hpp  light.hpp
include/LTRE/light/sky/: ibl.hpp  sky.hpp  uniform-sky.hpp
include/LTRE/math/: vec2.hpp  vec3.hpp
include/LTRE/sampling/: rng.hpp  sampler.hpp  sampling.hpp  uniform.hpp
include/LTRE/shape/: mesh.hpp  plane.hpp  shape.hpp  sphere.hpp  triangle.hpp
include/LTRE/sky/: uniform-sky.hpp
src/bsdf/: bsdf.cpp
src/bsdf/bxdf/: bxdf.cpp  diffuse.cpp  disney.cpp  fresnel.cpp  microfacet.cpp
src/camera/: camera.cpp  pinhole-camera.cpp  thin-lens.cpp
src/core/: aabb.cpp  io.cpp  material.cpp  model.cpp  primitive.cpp  ray.cpp  renderer.cpp  scene.cpp  spectrum.cpp
src/integrator/: ao.cpp  nee.cpp  pt.cpp
src/light/: area-light.cpp
src/light/sky/: ibl.cpp  uniform-sky.cpp
src/sampling/: rng.cpp  sampling.cpp  uniform.cpp
src/shape/: mesh.cpp  plane.cpp  sphere.cpp
tests/: CMakeLists.txt  empirical_distribution.cpp  glass_test.py  qbvh.cpp  vec2.cpp  vec3.cpp
